--- a/package.json
+++ b/package.json
@@ -46,15 +46,9 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
-    "husky": ">=6",
+    "husky": "^6.0.0",
     "lint-staged": ">=10",
     "prettier": "2.3.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
