--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.1",
     "antd": "^4.16.2",
     "craco-less": "^1.17.1",
     "dayjs": "^1.10.5",
@@ -22,10 +23,11 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-query": "^3.5.10",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "react-query": "^3.5.10"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
