--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-helmet": "^6.1.1",
+    "@welldone-software/why-did-you-render": "^6.2.0",
     "antd": "^4.16.2",
     "craco-less": "^1.17.1",
     "dayjs": "^1.10.5",
